--- a/assets/styles/dialog.css
+++ b/assets/styles/dialog.css
@@ -1,42 +1,83 @@
-.color_blackT{
-    color:rgba(0, 0, 0, 0.37);
+.color_blackT {
+    color: rgba(0, 0, 0, 0.37);
 }
 
-.color_black{
-    color:rgb(0, 0, 0);
+.color_black {
+    color: rgb(0, 0, 0);
 }
 
-.text_align{
+.text_align {
     text-align: center;
 }
 
-.flex_center{
+.flex_center {
     display: flex;
     justify-content: center;
 }
 
-.flex_centerD{
+.flex_centerD {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.div_main{
+.div_main {
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.pokemon_Story{
+.pokemon_Story {
     text-align: center;
     margin: 10px 0;
 }
 
-.width_height{
-    margin: 20px 0;
+.weight_height {
+    margin: 5px 0;
     width: 100%;
     display: flex;
+    justify-content: space-between;
+}
+
+.types {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 5px;
+    font-size: 14px;
+}
+
+.abilities{
+    width: 90%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    gap: 10px;
+}
+
+.abilities ul{
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
     justify-content: space-evenly;
+    font-size: 14px;
+}
+
+.abilities li {
+    padding: 2px 5px;
+    border-radius: 3px;
+    font-size: 14px;
+    background-color: #efefef4f;
+    border: 1px solid #efefef5b;
 }
