--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,7 +45,7 @@ main {
     justify-content: center;
     align-items: start;
     width: 350px;
-    height: 100vh;
+    height: 80vh;
     background-color: white;
     border-radius: 5px;
     border: 1px solid #efefef;
@@ -54,19 +54,16 @@ main {
 }
 
 h2 {
-    /* color: rgba(255, 255, 255, 0.596); */
     font-size: 18px;
     margin: 0;
 }
 
 h3 {
-    /* color: white; */
     font-size: 20px;
     margin: 0;
 }
 
 h4 {
-    /* color: black; */
     font-size: 16px;
     margin: 0;
 }
@@ -120,6 +117,7 @@ article:hover {
 .article_div {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .details_img {
@@ -144,12 +142,30 @@ article:hover {
 }
 
 .article_types li {
-    padding: 5px 8px;
+    padding: 2px 5px;
     border-radius: 3px;
+    font-size: 14px;
 }
 
 .padding-5 {
     text-align: center;
     padding: 5px;
     border-radius: 5px;
+}
+
+.content_loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.content_loading img{
+    width: 300px;
+    height: 300px;
+}
+
+.display_none{
+    display: none;
 }
