--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,12 +10,12 @@ body {
 }
 
 .div_body {
-    width: 70%;
+    width: 65%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 100px 0;
+    margin:50px 0;
 }
 
 main {
@@ -40,17 +40,22 @@ main {
     gap: 10px;
 }
 
+.div_right{
+    position: sticky;
+    top: 100px;
+}
+
 .content_right {
     display: flex;
     justify-content: center;
     align-items: start;
-    width: 350px;
-    height: 80vh;
+    width: 310px;
+    height: 600px;
     background-color: white;
     border-radius: 5px;
     border: 1px solid #efefef;
-    position: sticky;
-    top: 100px;
+    padding-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 h2 {
@@ -75,22 +80,39 @@ p{
 /* ---Serach */
 .search{
     display: flex;
-    width: 100%;
+    width: 290px;
+    background-color: #efefef;
+    border: 1px solid #dfdede;
+    padding: 10px;
+    border-radius: 5px;
+    gap: 10px;
 }
 
 .search button{
     width: 100px;
+    color: #bb55ba;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: #fcfafa;
+    border: 1px solid #bb55ba;
+    transition: all 500ms ease-in-out;
+}
 
+.search button:hover{
+    background-color: #bb55ba;
+    color: white;
 }
 
 .search_input{
     width: 100%;
     height: 30px;
     border-radius: 5px;
-    border: 1px solid #e0e0e0;
+    border: 1px solid #bb55ba;
     padding-left: 10px;
     outline: none;
-    margin-right: 50px;
+    color: #bb55ba;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 /* ---article */
@@ -128,8 +150,8 @@ article:hover {
 
 .article_img {
     margin-top: -100px;
-    width: 180px;
-    height: 180px;
+    width: 150px;
+    height: 150px;
 }
 
 .article_types,.article_types ul {
@@ -168,4 +190,177 @@ article:hover {
 
 .display_none{
     display: none;
+}
+
+.btn_plus{
+    width: 30px;
+    margin-top: 50px;
+    cursor: pointer;
+    transition: all 250ms ease-in-out;
+}
+
+.btn_plus:hover{
+    scale: 1.1;
+}
+
+.more_loading{
+    display: none;
+    width: 30px;
+    margin-top: 50px;
+}
+
+.color_blackT {
+    color: rgba(0, 0, 0, 0.37);
+}
+
+.color_black {
+    color: rgb(0, 0, 0);
+}
+
+.text_align {
+    text-align: center;
+}
+
+.flex_center {
+    display: flex;
+    justify-content: center;
+}
+
+.flex_centerD {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.div_main {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pokemon_Story {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.weight_height {
+    margin: 5px 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.types {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 5px;
+    font-size: 14px;
+}
+
+.abilities{
+    width: 90%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    gap: 10px;
+}
+
+.abilities ul{
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 14px;
+}
+
+.abilities li {
+    padding: 2px 5px;
+    border-radius: 3px;
+    font-size: 14px;
+    background-color: #efefef4f;
+    border: 1px solid #efefef5b;
+}
+
+.stats{
+    width: 90%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    gap: 10px;
+}
+
+.div_stats{
+    display: flex;
+    gap: 10px;
+}
+
+.div_stats ul{
+    list-style: none;
+    margin: 0;
+    padding: 5px;
+    background-color: #efefef4f;
+    border: 1px solid #efefef5b;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.kp{
+    background-color: rgb(255, 196, 0);
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.at{
+    background-color: red;
+    color: white;
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.ve{
+    background-color: rgb(0, 4, 255);
+    color: white;
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.sa{
+    background-color: rgb(255, 0, 119);
+    color: white;
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.sd{
+    background-color: rgb(0, 255, 42);
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.ini{
+    background-color: rgb(0, 225, 255);
+    padding: 5px;
+    border-radius: 50%;
 }
