--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,7 @@ body {
     box-sizing: border-box;
     background-color: #F6F8FC;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: black;
@@ -14,13 +15,71 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 50px 0;
+    margin: 0;
     max-width: 1920px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid #dfba19;
+    margin-bottom: 30px;
+    background-color: #fed61f;
+    border-radius: 5px;
+    padding: 10px 0 0 0;
+}
+
+a {
+    text-decoration: none;
+    color: #ce1821;
+}
+
+header nav {}
+
+header ul {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0 5px 0;
+    color: #ce1821;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+header li {
+    transition: all 250ms ease-in;
+}
+
+header li:hover {
+    scale: 1.1;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    border-top: 1px solid #dfba19;
+    margin-top: 30px;
+    background-color: #fed61f;
+    border-radius: 5px;
+    padding: 10px 0;
+    color: #0000009a;
+    font-size: 15px;
+}
+
+header img {
+    height: 150px;
 }
 
 main {
     display: flex;
     justify-content: center;
+    flex: 1;
 }
 
 .content_left {
@@ -31,6 +90,7 @@ main {
     flex: 1;
     gap: 20px;
     margin-right: 10px;
+    margin-top: -10px;
 }
 
 .pokemon_list {
@@ -44,7 +104,7 @@ main {
 
 .div_right {
     position: sticky;
-    top: 100px;
+    top: 80px;
 }
 
 .content_right {
@@ -107,12 +167,29 @@ p {
 .search_input {
     width: 100%;
     height: 30px;
-    border-radius: 5px;
+    border-radius: 3px;
     border: 1px solid #bb55ba;
     padding-left: 10px;
     outline: none;
     color: #bb55ba;
     font-weight: bold;
+}
+
+.filter img,
+.search img {
+    width: 30px;
+    height: 30px;
+    transition: all 250ms ease-in-out;
+    cursor: pointer;
+}
+
+.filter img:hover,
+.search img:hover {
+    scale: 1.1;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
 }
 
 article {
@@ -137,7 +214,7 @@ article:hover {
 .article_div {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
 }
 
 .details_img {
@@ -154,8 +231,8 @@ article:hover {
 
 .article_img_list {
     margin-top: -80px;
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
 }
 
 .article_types,
@@ -416,4 +493,9 @@ article:hover {
 .filter select:hover {
     background-color: rgb(159, 212, 245);
     border-color: #666;
+}
+
+.div_exit_back_next {
+    display: flex;
+    gap: 70px;
 }
